Ensure description fields are displayed to the right of their inputs and do not overlap (fixes #420)

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -30,6 +30,13 @@
 	line-height: 30px;
 }
 
+.form-field-description
+{
+	position: relative;	
+	left: 20px;
+	overflow-x: auto;
+}
+
 .offset-anchor
 {
   display: block;
